# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md  build-supreme.sh  main.cpp
tic-tac-toe/: computer.cpp  computer.h  field.cpp  field.h  game.cpp  game.h  human.cpp  human.h  player.cpp  player.h
